# restaurant_app

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
source/: main.py
source/admin/: Menu_2.xlsx
source/api/routes/: dish_router.py  menu_router.py  submenu_router.py
source/core/: config.py
source/database/: models.py  schemas.py  session_manager.py
source/migration/: env.py
source/migration/versions/: 2024_12_28_1414-69f9a6b342fb_initial_revision.py
source/repository/: restaurant_menu_repository.py  restaurant_repository.py
source/router/: dish_router.py  menu_router.py  submenu_router.py
source/service/: file_service.py  parse_xlsx_service.py  parser_xlsx_service.py  restaurant_menu_service.py  restaurant_service.py
source/task/: __init__.py  abstract_http_client.py  http_client_admin_restaurant.py  parser_xlsx_service.py  task.py
source/utils/: redis_cache.py
source/utils/file_service/: abstract_file_service.py  base_file_service.py
